--- a/themes/customTheme/layout/index.ejs
+++ b/themes/customTheme/layout/index.ejs
@@ -1,21 +1,17 @@
 <div class='row text-center top-part'>
-    <img src="http://i.imgur.com/hznjbRp.jpg" alt="Mai face" class="img-circle" />
+    <img src="/image/my-photo.jpg" width = "300px" alt="My face" class="img-circle" />
 	<h1 class='author-name'><%= config.author %></h1>
     <div class='col-sm-4 col-sm-offset-4'>
         <p><%= config.subtitle %></p>
     </div>
     <div class='col-sm-12'>
-        <a href='https://www.linkedin.com/in/williamsonvictoria' target='_blank' class="btn btn-linkedin btn-circle">
-            <i class="fa fa-linkedin fa-6"></i>
+        <a href='https://github.com/RistoBIn' target='_blank' class="btn btn-linkedin btn-circle">
+            <i class="fa fa-github fa-6"></i>
         </a>
-        <a href='https://twitter.com/vwswims' target='_blank' class="btn btn-info btn-circle">
-            <i class="fa fa-twitter fa-6"></i>
-        </a>
-        <a href='https://www.facebook.com/vwilliamson' target='_blank' class="btn btn-primary btn-circle">
+        <a href='https://www.facebook.com/risto.binovski' target='_blank' class="btn btn-primary btn-circle">
             <i class="fa fa-facebook fa-6"></i>
         </a>
     </div>
-
 </div>
 <section class="ss-style-doublediagonal">
     <% page.posts.each(function(post){ %>
