--- a/themes/customTheme/layout/index.ejs
+++ b/themes/customTheme/layout/index.ejs
@@ -1,4 +1,4 @@
-<div class='row text-center top-part'>
+<div class='row text-center top-part' style="padding: 100px 0px;">
     <img src="/image/my-photo.jpg" width = "300px" alt="My face" class="img-circle" />
 	<h1 class='author-name'><%= config.author %></h1>
     <div class='col-sm-4 col-sm-offset-4'>
@@ -11,6 +11,38 @@
         <a href='https://www.facebook.com/risto.binovski' target='_blank' class="btn btn-primary btn-circle">
             <i class="fa fa-facebook fa-6"></i>
         </a>
+    </div>
+</div>
+<div class='row text-center top-part ss-style-doublediagonal'>
+    
+    <div class='col-sm-12' style="text-align: left">
+        <h1 class='author-name' style="text-align: center">Skills && Contact </h1>
+        <div class="col-sm-8">
+            <h2>**Data analysis & visualization<br></h2>
+                - Python Library:  Numpy, Pandas, SymPy, Matplotlib, Scipy<br>
+                - Machine learning (scikit-learn) in Python<br>
+                - Machine learning in R<br>
+                - Data Visualization using d3.js, amchart.js, chart.js, R markdown, R Shiny<br>
+                - Data Scraping using Selenium<br>
+                - xlwings, VBA with pythonAPI<br>
+
+            <h2>** Web Devleopment<br></h2>
+                - React/Redux Angular, Vue.js<br>
+                - HTML/CSS, SASS(scss)<br>
+                - WordPress, Shopify, Hugo/Jekyll/Hexo CMS<br>
+                - Shiny App using RStudio<br>
+                - PHP, Node, Python, R, Javascript, Jquery, GraphQL query<br>
+                - git, bitbucket, svn<br>
+                - AWS, Heroku<br>
+        </div>
+        <div class="col-sm-4">
+            <h2>**Address<br></h2>
+                5-ta Patrtiska, stip, Macedonia
+            <h2>**Phone<br></h2>
+                38978657568
+            <h2>**Gmail<br></h2>
+                ristobinovski@gmail.com
+        </div>
     </div>
 </div>
 <section class="ss-style-doublediagonal">
